@@ -1,12 +1,12 @@
 # Extended Module Player src/drivers/Makefile
-# $Id: Makefile,v 1.11 2007-10-06 11:12:39 cmatsuoka Exp $
+# $Id: Makefile,v 1.12 2007-11-09 02:09:54 cmatsuoka Exp $
 
 TOPDIR	= ../..
 XCFLAGS	= -I../include
 OBJS	= file.o wav.o callback.o
 DRV	= file.c oss_mix.c hpux.c bsd.c solaris.c oss_seq.c alsa.c alsa05.c \
 	  esd.c sgi.c os2_dart.c netbsd.c openbsd.c aix.c nas.c arts.c qnx.c \
-	  win32.c callback.c wav.c osx.c beos.c alsa_seq.c
+	  win32.c callback.c wav.c osx.c beos.c alsa_seq.c pulseaudio.c
 DFILES	= Makefile $(DRV) debug.c
 DDIRS	=
 LIB	= $(TOPDIR)/lib/libxmp.a
